Use environment variables in cronjob.yaml
The following environment variables will be replaced

- CRONJOB_CATEGORY
- CRONJOB_IAM_ROLE_NAME
- CRONJOB_IMAGE_REPO
- CRONJOB_IMAGE_TAG
- CRONJOB_NAME
- CRONJOB_SCHEDULE
- CRONJOB_TEAM

User/Developer doesn't need to care where these value come from, but
some will come from the `deploy.json` (e.g. role, schedule, team,
category, etc...), some will come from GH and or the Docker image
registry, etc...

These will be replaced by the Concourse pipeline (using `envsubst`)

--- a/cronjob/cronjob.yaml
+++ b/cronjob/cronjob.yaml
@@ -1,21 +1,21 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: ((???))
+  name: ${CRONJOB_NAME}
 spec:
-  schedule: "((cronjob-schedule))"
+  schedule: ${CRONJOB_SCHEDULE}
   jobTemplate:
     spec:
       template:
         metadata:
           labels:
-            team: ((team))
-            category: ((cronjob-category))
+            team: ${CRONJOB_TEAM}
+            category: ${CRONJOB_CATEGORY}
           annotations:
-            iam.amazonaws.com/role: ((iam-role-name))
+            iam.amazonaws.com/role: ${CRONJOB_IAM_ROLE_NAME}
         spec:
           restartPolicy: OnFailure
           containers:
-            - image: ((docker-image-repo)):((docker-image-tag))
-              name: job
+            - image: ${CRONJOB_IMAGE_REPO}:${CRONJOB_IMAGE_TAG}
+              name: ${CRONJOB_NAME}
               imagePullPolicy: IfNotPresent
